--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/express": "^4.17.22",
     "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.12.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "favicons": "^7.2.0"
   }
 }
